...

  static const String play = '播放';
  static const String pause = '暂停';
  static const String step = '单步';
  static const String slow = '慢速';
  static const String normal = '正常';
  static const String reset = '重置';
  static const String returnSkater = '返回';

  static const String position = '位置';
  static const String time = '时间';
  static const String clearTracks = '清除轨道';
  static const String addTrack = '添加轨道';
...
